[package]
name = "cygnus"
version = "0.1.0"
authors = ["Matthew Emerson <emersonmde@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uint = "0.8.2"
bigint = "4.4.1"
#modinverse = "0.1.1"
#primitive-types = "0.6.2"